[package]
name = "breakpoint_audio_player"
version = "0.0.1"
edition = "2021"
author = "ReverseCRYstal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
rfd = "0.11.3"
mp3-duration = "0.1.10"

[dependencies.rodio]
version = "0.17.1"
# features = ["minimp3"]
# default-features = false

[dependencies.symphonia]
version = "0.5.3"

[dependencies.windows]
version = "0.46.0"
features = [
    "Win32_UI_WindowsAndMessaging", 
    "Win32_Foundation"
]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3